# Inferno-OS_Android

./: .gitignore  README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  inferno_os_app.cpp  native-audio.c
inferno-os/: .gitignore  README.md  bld-lin.sh  bld.bat  bld.sh  cln.bat  cln.sh  makemk.sh  mkconfig  mkfile
inferno-os/appl/: mkfile
inferno-os/appl/alib/: titlebar.b
inferno-os/appl/awm/: atoolbar.b  awm.b  keyboard.b  man.b
inferno-os/appl/charon/: mkfile
inferno-os/appl/cmd/: emuinit.b  mkfile
inferno-os/appl/ebook/: understandingoeb.opf
inferno-os/appl/wm/: atoolbar.b  mkfile
inferno-os/dis/: dial.dis  emuinit.dis  getauthinfo.dis  listen.dis  lockfs.dis  rcmd.dis
inferno-os/dis/auth/: passwd.dis
inferno-os/dis/grid/: cpupool.dis  register.dis  reglisten.dis  regstyxlisten.dis  remotelogon.dis
inferno-os/dis/ip/: bootpd.dis
inferno-os/dis/lib/: dhcpclient.dis  ecmascript.dis  login.dis  mpeg.dis  newns.dis  ninep.dis  pop3.dis  registries.dis  smtp.dis  tftp.dis  titlebar.dis  virgil.dis
inferno-os/dis/sh/: sh.dis
inferno-os/dis/tiny/: kill.dis
inferno-os/dis/wm/: atoolbar.dis  awm.dis  keyboard.dis
inferno-os/emu/Android/: alloc-andr.c  amain.c  calltrace.c  chan-andr.c  devaudio_andr.c  devfs-posix-a.c  devfs.c  emu  emu.root.h  mkfile  os.c  telldir.c  win-andr.c
inferno-os/emu/Linux/: emu
inferno-os/emu/Nt/: emu  emu.c
inferno-os/emu/port/: devcons.c  devdraw.c  devgui.c  devmnt.c  dis.c  fns.h  kproc-pthreads.c  portmkfile  x11-keysym2ucs.c
inferno-os/fonts/ttf/: fantasques_30.font
inferno-os/icons/tk/: closebig.bit  helpbig.bit  maximisebig.bit  minimisebig.bit  okbig.bit  vitabig.bit  vitanuova.CDR  Резервная_копия_vitanuova.CDR
inferno-os/include/: draw.h  freetype.h  interp.h  kern.h  memdraw.h  pool.h  tk.h
inferno-os/include/freetype/: freetype.h  ft2build.h  ftbbox.h  ftbdf.h  ftcache.h  ftglyph.h  ftgzip.h  ftimage.h  ftincrem.h  ftlist.h  ftmac.h  ftmm.h  ftmodule.h  ftoutln.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroker.h  ftsynth.h  ftsysio.h  ftsysmem.h  ftsystem.h  fttypes.h  ftxf86.h  t1tables.h  ttnameid.h  tttables.h  tttags.h
inferno-os/include/png/: README.md  lodepng.h
inferno-os/include/svg/: README.md  nanosvg.h  nanosvgrast.h
inferno-os/lib/: awmsetup
inferno-os/lib/lego/: styx_abp.srec
inferno-os/lib/sh/: owen
inferno-os/lib/startup/: cmd_line.txt
inferno-os/lib/tk/: deftkfont.txt
inferno-os/lib9/: setfcr-Android-arm.S  vfprint.c
inferno-os/libbfd/: Makefile.in  bfd-in2.h  configure  configure.ac  elf-attrs.c  elf-bfd.h  elf32-arm.c  mkfile
inferno-os/libcalltrace/: calltrace.c  calltrace2.c  mkfile
inferno-os/libdraw/: alloc.c  buildfont.c  font.c  getsubfont.c  getsubfont_ft.c  init.c  mkfile  openfont.c  readsubfont.c  string.c  stringwidth.c  window.c
inferno-os/libfreetype/: autohint.c  cff.c  freetype.c  ftbase.c  ftglyph.c  psaux.c
inferno-os/libinterp/: crypt.c  cryptfoos.h  draw.c  keyringif.h  runt.h  tk.c
inferno-os/libkern/: vlrt-mips.c
inferno-os/liblodepng/: lodepng.c  mkfile
inferno-os/libmemdraw/: hwdraw.c
inferno-os/libmemlayer/: draw.c
inferno-os/libtk/: buton.c  canvs.c  entry.c  frame.c  label.c  listb.c  menus.c  panel.c  parse.c  scale.c  scrol.c  textw.c  tmark.c  ttags.c  twind.c  utils.c
inferno-os/limbo/: asm.c  typecheck.c  y.tab.c
inferno-os/mkfiles/: mkfile-Android-arm  mkone-nt  mksyslib-nt
inferno-os/tools/styxtest/: o.out  styxtest.c
inferno-os/utils/5a/: y.debug  y.tab.c  y.tab.h
inferno-os/utils/8a/: y.debug  y.tab.c  y.tab.h
inferno-os/utils/acid/: y.tab.c  y.tab.h
inferno-os/utils/c2l/: y.tab.c  y.tab.h
(+255 files in other folders)
